--- a/login.html
+++ b/login.html
@@ -61,34 +61,6 @@
       </p>
     </div>
   </div>
-  <script type="module">
-    import { createApp } from 'https://cdnjs.cloudflare.com/ajax/libs/vue/3.0.9/vue.esm-browser.js';
-    const app = {
-      data() {
-        return {
-          url: 'https://vue3-course-api.hexschool.io/v2',
-          user:  {
-            username: '',
-            password: ''
-          },
-        }
-      },
-      methods: {
-        login () {
-          axios.post(this.url + '/admin/signin', this.user)
-          .then((res) => {
-            const { token, expired } = res.data;
-            document.cookie = `hexToken=${ token }; expires=${ new Date(expired) };`;
-            window.location = 'product.html'
-          })
-          .catch((error) => {
-            console.dir(error);
-          })
-        }
-      }
-    };
-
-    Vue.createApp(app).mount('#app');
-  </script>
+  <script src="../js/login.js" type="module"></script>
 </body>
 </html>
